--- a/helm/petclinic/values.yaml
+++ b/helm/petclinic/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: initsixcloud/petclinic
+  repository: sunnyvalechha/petclinic
   tag: latest
   pullPolicy: IfNotPresent
 
