--- a/helm/petclinic/templates/petclinic-mem-hpa.yaml
+++ b/helm/petclinic/templates/petclinic-mem-hpa.yaml
@@ -3,14 +3,17 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: petclinic-mem-hpa
 spec:
-  maxReplicas: 5
   minReplicas: 1
+  maxReplicas: 5
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: petclinic-deployment
   metrics:
-  - type: Resource
-    resource:
-      name: memory
-      averageUtilization: 50
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 50
+
