Update image tag to version 6

--- a/helm/petclinic/values.yaml
+++ b/helm/petclinic/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: sunnyvalechha/petclinic
-  tag: latest
+  tag: 6
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
