Refactor deployment.yaml for better configuration

--- a/helm/petclinic/templates/deployment.yaml
+++ b/helm/petclinic/templates/deployment.yaml
@@ -1,16 +1,16 @@
-#Deployment
-###controllers/pb-deploy.tml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: petclinic-deployment
 spec:
   replicas: 1
+  minReadySeconds: 5
+  revisionHistoryLimit: 10
   strategy:
     type: RollingUpdate
     rollingUpdate:
-  minReadySeconds: 5
-  revisionHistoryLimit: 10
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: petclinic-app
@@ -19,21 +19,22 @@ spec:
       labels:
         app: petclinic-app
     spec:
-      containers:
-      - name: petclinic-container
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: Always
-        resources:
-          limits:
-            cpu: '1'
-            memory: '1G'
-          requests:
-            cpu: '1'
-            memory: '1G'
-        ports:
-        - containerPort: 8080
+      {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
-      - name: regcred
-
+      {{- toYaml .Values.imagePullSecrets | nindent 8 }}
+      {{- end }}
+      containers:
+        - name: petclinic-container
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - containerPort: 8080
+          resources:
+            requests:
+              cpu: "500m"
+              memory: "512Mi"
+            limits:
+              cpu: "1"
+              memory: "1Gi"
 
 
