Change image pull policy to Always

--- a/helm/petclinic/values.yaml
+++ b/helm/petclinic/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: sunnyvalechha/petclinic
   tag: 6
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 imagePullSecrets: []
 nameOverride: ""
